--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,9 @@ kotlinVersion=1.9.22
 ### Kotest ###
 kotestVersion=5.7.2
 kotestExtensionSpringVersion=1.1.3
+
+### RestAssured ###
+restAssuredVersion=5.3.0
+
+### Lombok ###
+lombokVersion=1.18.24
