[build] : gallery 모듈과 kotlin 구성을 추가한다

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 plugins {
-	id 'java-library'
-	id 'org.springframework.boot' apply false
-	id 'io.spring.dependency-management'
-	id 'org.sonarqube'
+    id 'java-library'
+    id 'org.springframework.boot' apply false
+    id 'io.spring.dependency-management'
+    id 'org.sonarqube'
+    id "org.jetbrains.kotlin.jvm"
+    id "org.jetbrains.kotlin.plugin.jpa"
+    id "org.jetbrains.kotlin.plugin.spring"
+    id "org.jetbrains.kotlin.plugin.allopen"
 }
 
 apply from: 'gradle/spring.gradle'
@@ -10,15 +14,16 @@ apply from: 'gradle/sonar.gradle'
 apply from: 'gradle/jacoco.gradle'
 apply from: 'gradle/junit.gradle'
 apply from: 'gradle/lombok.gradle'
+apply from: 'gradle/kotlin.gradle'
 
 allprojects {
 
-	group = "${projectGroup}"
-	version = "${applicationVersion}"
-	sourceCompatibility = project.javaVersion
+    group = "${projectGroup}"
+    version = "${applicationVersion}"
+    sourceCompatibility = project.javaVersion
 
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+    }
 
 }
