[refactor] : TimeUtil을 static하게 변경한다

--- a/survey/survey-jpa-adaptor/build.gradle
+++ b/survey/survey-jpa-adaptor/build.gradle
@@ -5,5 +5,6 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    testImplementation project(':core:time')
     testImplementation 'com.h2database:h2:2.1.214'
 }
