feat: GalleryPreview 조회 기능을 추가한다

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ javaVersion=17
 ### Spring dependency versions ###
 springBootVersion=2.7.11
 springDependencyManagementVersion=1.0.15.RELEASE
+springMockkVersion=4.0.0
 
 ### Sonar settings ###
 sonarVersion=4.0.0.2929
@@ -30,3 +31,6 @@ kotlinVersion=1.9.22
 ### Kotest ###
 kotestVersion=5.7.2
 kotestExtensionSpringVersion=1.1.3
+
+### RestAssured ###
+restAssuredVersion=5.3.0
