--- a/gallery/build.gradle
+++ b/gallery/build.gradle
@@ -4,9 +4,12 @@ repositories {
 
 dependencies {
     implementation project(":core:data")
+    implementation project(":survey:survey-application")
 
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+
+    testImplementation "com.ninja-squad:springmockk:${springMockkVersion}"
 
     testRuntimeOnly "com.h2database:h2"
 }
