[feat] : 내 Gallery 등록 기능을 추가한다

--- a/gallery/build.gradle
+++ b/gallery/build.gradle
@@ -4,6 +4,8 @@ repositories {
 
 dependencies {
     implementation project(":core:data")
+    implementation project(":core:id-generator:id-core")
+    implementation project(":core:time")
     implementation project(":survey:survey-application")
 
     implementation "org.springframework.boot:spring-boot-starter-web"
