[build] : 인수테스트 build.gradle에 gallery 도메인 의존성을 추가한다

--- a/api/acceptance-test/build.gradle
+++ b/api/acceptance-test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation project(':user:user-application')
     testImplementation project(':user:user-jpa-adapter')
     testImplementation project(':user:user-web-adaptor')
+    testImplementation project(':gallery')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
