--- a/.github/workflows/docker-release-publisher.yml
+++ b/.github/workflows/docker-release-publisher.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew clean build -x test
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
@@ -43,9 +49,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
+          push: true
           context: .
           file: ./Dockerfile
-          push: true
           build-args: |
             DB_URL=${{ secrets.DB_URL }} 
             DB_USERNAME=${{ secrets.DB_USERNAME }} 
@@ -53,6 +59,6 @@ jobs:
             JWT_SECRET=${{ secrets.JWT_SECRET }}
             KAKAO_CLIENT_ID=${{ secrets.KAKAO_CIENT_ID }}
             SENTRY_DSN=${{ secrets.SENTRY_DSN }}
-          tags: | 
+          tags: |
             samillmu/luffy:latest
-#            ${{ steps.meta.outputs.tags }}
+            ${{ steps.meta.outputs.tags }}
