--- a/survey/build.gradle
+++ b/survey/build.gradle
@@ -4,6 +4,7 @@ repositories {
 
 dependencies {
     implementation project(":core:data")
+    implementation project(":core:time")
 
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
