refactor: 전역 ErrorTemplate을 사용하도록 수정한다

--- a/auth/auth-interceptor/build.gradle
+++ b/auth/auth-interceptor/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':auth:auth-application')
-
+    implementation project(':core:exception-handler')
+    
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
