--- a/gallery/build.gradle
+++ b/gallery/build.gradle
@@ -4,9 +4,10 @@ repositories {
 
 dependencies {
     implementation project(":core:data")
-    implementation project(":core:id-generator:id-core")
     implementation project(":core:time")
+    implementation project(":core:exception-handler")
     implementation project(":survey:survey-application")
+    implementation project(":core:id-generator:id-core")
 
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
