--- a/auth/auth-web-adaptor/build.gradle
+++ b/auth/auth-web-adaptor/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':auth:auth-application')
     implementation project(':auth:oauth-application')
+    implementation project(':core:exception-handler')
     testImplementation project(':auth:auth-application')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
