--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ apply from: 'gradle/jacoco.gradle'
 apply from: 'gradle/junit.gradle'
 apply from: 'gradle/lombok.gradle'
 apply from: 'gradle/kotlin.gradle'
+apply from: 'gradle/migration.gradle'
 
 allprojects {
 
