--- a/gradle/kotlin.gradle
+++ b/gradle/kotlin.gradle
@@ -14,7 +14,7 @@ allprojects {
     apply plugin: 'org.jetbrains.kotlin.plugin.allopen'
 
     allOpen {
-        annotation("jakarta.persistence.Entity")
+        annotation("javax.persistence.Entity")
     }
 
     dependencies {
